<resources>
    <string name="app_name">Ghosts of History</string>
    <string name="app_name_explorer">Ghosts of History</string>
    <string name="app_name_editor">Ghosts of History: Private Access</string>
    <string name="cancel">Cancel</string>
    <string name="host_button_text">Start scanning</string>
    <string name="scan_successful">Scan successful!</string>
    <string name="create_new_exhibit">Create a new exhibit</string>
    <string name="edit_exhibit">Edit an exhibit</string>
    <string name="host_instructions_text">First enter the details of you new exhibit, then scan your space to create a new ghost of history accessible by others</string>
    <string name="begin_resolve_button_text">Begin resolving</string>
    <string name="resolve_title_text">Resolve Cloud Anchor(s)</string>
    <string name="resolve_instructions_text">Localize this device against previously created Cloud Anchor(s)</string>
    <string name="debug_text">Debug panel</string>
    <string name="user_message_text">Trying to find a matching window!</string>
    <string name="resolve_an_anchor_text">Resolve anchor(s)</string>
    <string name="resolve_an_anchor_instructions_text">Choose up to 40 anchors to resolve at once</string>
    <string name="select_anchors_text">Select from anchors previously hosted from this device</string>
    <string name="enter_anchor_text">Enter anchor ID(s) manually, separated by commas</string>
    <string name="enter_anchor_hint">Anchor IDs…</string>
    <string name="resolve_button_text">Resolve</string>
    <string name="arcore_unavailable">Please install ARCore.</string>
    <string name="arcore_too_old">Please update ARCore.</string>
    <string name="arcore_sdk_too_old">Please update the app with a newer version of the ARCore SDK.</string>
    <string name="arcore_exception">This device does not support ARCore.</string>
    <string name="camera_unavailable">Camera unavailable. Try restarting the app.</string>
    <string name="hosting_place_anchor">Tap on a plane to place an object.</string>
    <string name="hosting_save">To save this location, continue walking around the object to capture it from different angles</string>
    <string name="hosting_processing">Processing…</string>
    <string name="hosting_success">Finished!</string>
    <string name="hosting_error">Hosting Error: %1$s</string>
    <string name="debug_hosting_place_anchor">Tap a vertical or horizontal plane…</string>
    <string name="debug_hosting_save">Average Mapping Quality: %1$s\nNote: Horizontal and vertical planes have slightly
    different hosting UIs for better visualization.</string>
    <string name="debug_hosting_processing">FeatureMapQuality has reached SUFFICIENT-GOOD, triggering hostCloudAnchor().</string>
    <string name="debug_hosting_success">Anchor %1$s created.</string>
    <string name="debug_hosting_error">There was an error during Hosting: %1$s</string>
    <string name="nickname_title_text">Enter name</string>
    <string name="nickname_instructions_text">Enter a name for your anchor ID(to be stored in local app storage)</string>
    <string name="nickname_default">Cloud Anchor</string>
    <string name="nickname_dialog_ok">OK</string>
    <string name="too_close">You are too close; move backward.</string>
    <string name="too_far">You are too far; come closer</string>
    <string name="resolving_processing">Look at the location you expect the AR experience to appear.</string>
    <string name="resolving_success">Resolve success!</string>
    <string name="resolving_error">Resolving Error: %1$s</string>
    <string name="debug_resolving_processing">Attempting to resolve %1$d anchors…</string>
    <string name="debug_resolving_success">Resolved anchors; continuing to refine pose.</string>
    <string name="debug_resolving_error">There was an error during Resolving: %1$s</string>
    <string name="share_experience_title">Experience it together</string>
    <string name="share_experience_message">To power this session, Google will process visual data from your camera.</string>
    <string name="agree_to_share">Start now</string>
    <string name="learn_more">Learn more</string>
    <string name="learn_more_url">https://developers.google.com/ar/data-privacy</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_anchor_list">AnchorListActivity</string>
    <string name="large_text">
        "Material is the metaphor. A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="text_select_image">Tap to select an image</string>
    <string name="text_select_video">Tap to select a video</string>
    <string name="cancel_scanning">Cancel scanning</string>
    <string name="proceed_to_scanning">Explore Ghosts of History!</string>
    <string name="checkbox_enable">Enable</string>
    <string name="item_title">Ghost of history</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="app_name_editor_new">Editor: Ghosts of History</string>
</resources>