<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/goh_icon" />
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="7dp"
        android:paddingVertical="7dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemTitleView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/item_title"
            android:textAppearance="@style/preview_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemDescriptionView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/large_text"
            android:textAppearance="@style/item_body" />
    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/enable_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/checkbox_enable"
        app:buttonIconTint="@color/md_theme_onTertiary"
        app:buttonTint="@color/md_theme_tertiary" />

</LinearLayout>