

<!--
   Copyright 2020 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ghosts.of.history.view.EditAnchorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/md_theme_primary"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:navigationIconTint="@color/md_theme_onPrimary"
            app:title="@string/create_new_exhibit"
            app:titleTextAppearance="@style/app_bar_title"
            app:titleTextColor="@color/md_theme_onPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/save_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/preview_title"
                android:text="Saving…"
                />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_anchor_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/edit_anchor_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Name of the exhibit" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Description of the exhibit" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_image_select"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/card_video_select"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/image_view"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginHorizontal="10dp"
                                android:layout_marginTop="10dp"
                                android:contentDescription="Selected image"
                                android:scaleType="centerCrop"
                                android:src="@drawable/goh_icon"
                                app:layout_constraintBottom_toTopOf="@id/select_image_text"
                                app:layout_constraintDimensionRatio="1:1"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/select_image_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/text_select_image"
                                android:textAppearance="@style/preview_title"
                                app:autoSizeMaxTextSize="20sp"
                                app:autoSizeMinTextSize="5sp"
                                app:autoSizeStepGranularity="2sp"
                                app:autoSizeTextType="uniform"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/image_view" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_video_select"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/card_image_select">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/video_preview"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginHorizontal="10dp"
                                android:layout_marginTop="10dp"
                                android:contentDescription="Selected video"
                                android:scaleType="centerCrop"
                                android:src="@drawable/goh_icon"
                                app:layout_constraintBottom_toTopOf="@id/select_video_text"
                                app:layout_constraintDimensionRatio="1:1"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/select_video_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/text_select_video"
                                android:textAppearance="@style/preview_title"
                                app:autoSizeMaxTextSize="20sp"
                                app:autoSizeMinTextSize="5sp"
                                app:autoSizeStepGranularity="2sp"
                                app:autoSizeTextType="uniform"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/video_preview" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/start_scanning_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/md_theme_secondary"
                android:text="@string/host_button_text"
                android:textColor="@color/md_theme_onSecondary"
                android:theme="@style/AppButtonTheme"
                app:icon="@drawable/baseline_arrow_forward_24"
                app:iconGravity="end"
                app:iconTint="@color/md_theme_onSecondary"
                app:layout_constraintBottom_toTopOf="@id/delete_cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_anchor_fields" />

            <!-- We have a delete button when we are creating an anchor, and a cancel button when editing it -->
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/delete_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/md_theme_tertiary"
                android:text="Delete"
                android:textColor="@color/md_theme_onTertiary"
                android:theme="@style/AppButtonTheme"
                app:icon="@drawable/icon_delete_trash"
                app:iconTint="@color/md_theme_onTertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/save_button"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorBluevota"
                android:text="Save"
                android:textColor="@color/md_theme_onTertiary"
                android:theme="@style/AppButtonTheme"
                app:icon="@drawable/goh_icon_white"
                app:iconTint="@color/md_theme_onTertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/delete_cancel_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</LinearLayout>
